# ACV_final_project

./: .gitignore  AGENTS.md  PREPROCESS_CONCEPT_SUMMARY.md  TRAIN_CONCEPT_SUMMARY.md  inference.py  main.py  note.txt  package-lock.json  prepare_server.sh  preprocess_data.py  pyproject.toml  train.py  train_qwen_25.py
preprocess/: dataset.py  extract.py
tests/: test_dataset.py  test_extract.py  test_preprocess_data.py  test_train.py  test_train_cli.py
